2010-08-01  Bruno Haible  <bruno@clisp.org>

	New functions for comparing an ffloat or dfloat with a number.
	* ffloat.d (ffloat_decode): New macro, extracted from FF_decode.
	(FF_decode): Use it.
	* dfloat.d (dfloat_decode): New macro, extracted from DF_decode.
	(DF_decode): Use it.
	(dfloat_decode2): New macro, extracted from DF_decode2.
	(DF_decode2): Use it.
	* realelem.d (ffloat_R_equal, dfloat_R_equal): New functions.
	* compelem.d (ffloat_N_equal, dfloat_N_equal): New functions.

2010-08-01  Bruno Haible  <bruno@clisp.org>

	* lispbibl.d (dfloat, dfloatjanus): Make definition in clisp.h
	consistent with the one in lispbibl.d.

2010-08-01  Bruno Haible  <bruno@clisp.org>

	* aridecl.d (FF_exp_low, FF_exp_mid, FF_exp_high, DF_exp_low)
	(DF_exp_mid, DF_exp_high): Hardcode values from IEEE 754.
	* flo_konv.d (c_float_to_FF, FF_to_c_float, c_double_to_DF)
	(DF_to_c_double): Simplify accordingly.

2010-07-29  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_to_foreign): minor code simplification
	* foreign1.lisp (convert-from-foreign): fix a typo
	(convert-to-foreign): inline float conversion

2010-07-28  Sam Steingold  <sds@gnu.org>

	* foreign.d (convert_to_foreign): when fvd is a FLOAT type and obj
	is not of the right type, call coerce_float so that one can use
	any REAL to initialize a FLOAT (helps GSLL a LOT!)

2010-07-27  Sam Steingold  <sds@gnu.org>

	* makemake.in (manual_print): move `if' outside of the `for' loop
	($IMPNOTES_FILES, $DOC, $TOP_DOC): use link_dep

2010-07-23  Sam Steingold  <sds@gnu.org>

	* makemake.in (LIB_TYPE): remove obsolete unused code

2010-07-21  Sam Steingold  <sds@gnu.org>

	* m4/general.m4 (CL_CANONICAL_HOST_CPU): sync with ffcall to use
	CL_SET_CPU_ABI, CL_CACHE_EGREP_CPP, and substitute host_cpu_abi
	* makemake.in (cpu): use @host_cpu_abi@

2010-07-20  Sam Steingold  <sds@gnu.org>

	* stream.d (IS_EINVAL_EXTRA) [*bsd]: when ENOTSUP is not defined,
	use EOPNOTSUPP (e.g., on UNIX_OPENBSD)
